# cmake318_vstudio_c_cpp_repro

./: .gitignore  CMakeLists.txt  README.md  lib_cpp.cpp  lib_cpp.h  main.c
